; ModuleID = '/home/carl/AnghaBench/lz4/tests/extr_fuzzer.c_FUZ_createLowAddr.c'
source_filename = "/home/carl/AnghaBench/lz4/tests/extr_fuzzer.c_FUZ_createLowAddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@MAP_PRIVATE = common dso_local global i32 0, align 4
@MAP_ANONYMOUS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"generating low buffer at address %p \0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @FUZ_createLowAddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @FUZ_createLowAddr(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i32, i32* @PROT_READ, align 4
  %6 = load i32, i32* @PROT_WRITE, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @MAP_PRIVATE, align 4
  %9 = load i32, i32* @MAP_ANONYMOUS, align 4
  %10 = or i32 %8, %9
  %11 = call i8* @mmap(i8* inttoptr (i64 4096 to i8*), i64 %4, i32 %7, i32 %10, i32 -1, i32 0)
  store i8* %11, i8** %3, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @DISPLAYLEVEL(i32 2, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = load i8*, i8** %3, align 8
  ret i8* %14
}

declare dso_local i8* @mmap(i8*, i64, i32, i32, i32, i32) #1

declare dso_local i32 @DISPLAYLEVEL(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
